@startuml ERD Diagram - QRWare Database

!theme plain
skinparam linetype ortho

title Diagram ERD - Schemat bazy danych QRWare

' ==================== TABELE UZYTKOWNIKOW ====================
entity "users" as users {
    *id : BIGSERIAL <<PK>>
    --
    *username : VARCHAR(50) <<UNIQUE>>
    *email : VARCHAR(100) <<UNIQUE>>
    *password : VARCHAR(255)
    first_name : VARCHAR(50)
    last_name : VARCHAR(50)
    *enabled : BOOLEAN
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "roles" as roles {
    *id : BIGSERIAL <<PK>>
    --
    *name : VARCHAR(50) <<UNIQUE>>
    description : VARCHAR(255)
    *system_role : BOOLEAN
    *created_at : TIMESTAMP
}

entity "permissions" as permissions {
    *id : BIGSERIAL <<PK>>
    --
    *name : VARCHAR(100) <<UNIQUE>>
    description : VARCHAR(255)
    *resource : VARCHAR(50)
    *action : VARCHAR(50)
}

entity "user_roles" as user_roles {
    *user_id : BIGINT <<FK>>
    *role_id : BIGINT <<FK>>
}

entity "role_permissions" as role_permissions {
    *role_id : BIGINT <<FK>>
    *permission_id : BIGINT <<FK>>
}

' ==================== TABELE PRODUKTOW ====================
entity "categories" as categories {
    *id : BIGSERIAL <<PK>>
    --
    *name : VARCHAR(100)
    *code : VARCHAR(50) <<UNIQUE>>
    description : TEXT
    parent_id : BIGINT <<FK>>
    sort_order : INTEGER
    min_temperature : DECIMAL(5,2)
    max_temperature : DECIMAL(5,2)
    min_humidity : DECIMAL(5,2)
    max_humidity : DECIMAL(5,2)
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "products" as products {
    *id : BIGSERIAL <<PK>>
    --
    *name : VARCHAR(200)
    *sku : VARCHAR(50) <<UNIQUE>>
    barcode : VARCHAR(100)
    description : TEXT
    *category_id : BIGINT <<FK>>
    *unit_of_measure : VARCHAR(20)
    price : DECIMAL(10,2)
    cost : DECIMAL(10,2)
    weight : DECIMAL(10,3)
    width : DECIMAL(10,2)
    height : DECIMAL(10,2)
    depth : DECIMAL(10,2)
    min_stock_level : INTEGER
    max_stock_level : INTEGER
    reorder_point : INTEGER
    storage_conditions : VARCHAR(255)
    humidity : DECIMAL(5,2)
    *active : BOOLEAN
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==================== TABELE MAGAZYNU ====================
entity "zones" as zones {
    *id : BIGSERIAL <<PK>>
    --
    *name : VARCHAR(100)
    *code : VARCHAR(50) <<UNIQUE>>
    description : TEXT
    *type : VARCHAR(50)
    temperature : DECIMAL(5,2)
    humidity : DECIMAL(5,2)
    capacity : INTEGER
    *active : BOOLEAN
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "locations" as locations {
    *id : BIGSERIAL <<PK>>
    --
    *code : VARCHAR(50) <<UNIQUE>>
    name : VARCHAR(100)
    *zone_id : BIGINT <<FK>>
    *type : VARCHAR(50)
    aisle : VARCHAR(10)
    rack : VARCHAR(10)
    level : VARCHAR(10)
    position : VARCHAR(10)
    capacity : INTEGER
    max_weight : DECIMAL(10,2)
    *active : BOOLEAN
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==================== TABELE INWENTARZA ====================
entity "inventory_items" as inventory_items {
    *id : BIGSERIAL <<PK>>
    --
    *product_id : BIGINT <<FK>>
    *location_id : BIGINT <<FK>>
    *quantity : DECIMAL(10,3)
    reserved_quantity : DECIMAL(10,3)
    batch_number : VARCHAR(50)
    serial_number : VARCHAR(100)
    received_date : DATE
    expiration_date : DATE
    temperature : DECIMAL(5,2)
    humidity : DECIMAL(5,2)
    *status : VARCHAR(50)
    qr_code : VARCHAR(255)
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "movement_history" as movement_history {
    *id : BIGSERIAL <<PK>>
    --
    *inventory_item_id : BIGINT <<FK>>
    *movement_type : VARCHAR(50)
    *quantity : DECIMAL(10,3)
    quantity_before : DECIMAL(10,3)
    quantity_after : DECIMAL(10,3)
    from_location_id : BIGINT <<FK>>
    to_location_id : BIGINT <<FK>>
    *performed_by : BIGINT <<FK>>
    reason : VARCHAR(255)
    reference : VARCHAR(100)
    notes : TEXT
    *performed_at : TIMESTAMP
}

' ==================== TABELE ZLECEN ====================
entity "orders" as orders {
    *id : BIGSERIAL <<PK>>
    --
    *order_number : VARCHAR(50) <<UNIQUE>>
    *type : VARCHAR(50)
    *status : VARCHAR(50)
    *priority : VARCHAR(20)
    description : TEXT
    *created_by : BIGINT <<FK>>
    assigned_to : BIGINT <<FK>>
    expected_date : TIMESTAMP
    completed_date : TIMESTAMP
    notes : TEXT
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "order_items" as order_items {
    *id : BIGSERIAL <<PK>>
    --
    *order_id : BIGINT <<FK>>
    *product_id : BIGINT <<FK>>
    inventory_item_id : BIGINT <<FK>>
    source_location_id : BIGINT <<FK>>
    target_location_id : BIGINT <<FK>>
    *quantity : DECIMAL(10,3)
    picked_quantity : DECIMAL(10,3)
    *status : VARCHAR(50)
    notes : TEXT
    *created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "order_status_history" as order_status_history {
    *id : BIGSERIAL <<PK>>
    --
    *order_id : BIGINT <<FK>>
    *previous_status : VARCHAR(50)
    *new_status : VARCHAR(50)
    *changed_by : BIGINT <<FK>>
    notes : TEXT
    *changed_at : TIMESTAMP
}

' ==================== TABELE QR ====================
entity "qr_codes" as qr_codes {
    *id : BIGSERIAL <<PK>>
    --
    *type : VARCHAR(50)
    *reference_id : BIGINT
    *content : TEXT
    image_path : VARCHAR(500)
    *error_correction_level : VARCHAR(1)
    *size : INTEGER
    *generated_by : BIGINT <<FK>>
    *generated_at : TIMESTAMP
}

' ==================== RELACJE ====================

' Uzytkownicy
users ||--o{ user_roles
roles ||--o{ user_roles
roles ||--o{ role_permissions
permissions ||--o{ role_permissions

' Produkty
categories ||--o{ categories : "parent"
categories ||--o{ products

' Magazyn
zones ||--o{ locations

' Inwentarz
products ||--o{ inventory_items
locations ||--o{ inventory_items
inventory_items ||--o{ movement_history
locations ||--o{ movement_history : "from"
locations ||--o{ movement_history : "to"
users ||--o{ movement_history : "performed_by"

' Zlecenia
users ||--o{ orders : "created_by"
users ||--o{ orders : "assigned_to"
orders ||--o{ order_items
products ||--o{ order_items
inventory_items ||--o{ order_items
locations ||--o{ order_items : "source"
locations ||--o{ order_items : "target"
orders ||--o{ order_status_history
users ||--o{ order_status_history : "changed_by"

' QR
users ||--o{ qr_codes : "generated_by"

@enduml
